# curl-websocket

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  autobahn-testee.c  curl-websocket-utils.c  curl-websocket-utils.h  curl-websocket.c  curl-websocket.h  main.c
win32/: curl-ws.sln
win32/autobahn-testee/: autobahn-testee.vcxproj  autobahn-testee.vcxproj.filters
win32/curl-ws/: curl-ws.vcxproj  curl-ws.vcxproj.filters
